Refactor organization of lin_ridge search section of project.

--- a/s3_lin_ridge_trials.ipynb
+++ b/s3_lin_ridge_trials.ipynb
@@ -16,9 +16,9 @@
    "outputs": [],
    "source": [
     "import aux\n",
-    "from search import lin_ridge_viz\n",
+    "from lin_ridge import viz\n",
     "\n",
-    "from search import lin_ridge_global as C\n",
+    "from lin_ridge import search_global as C\n",
     "import PARAMETERS as P\n",
     "\n",
     "pre = {\n",
@@ -67,7 +67,7 @@
     "RUN = 0\n",
     "SAVE_DIR = 'sims/lin_ridge/smln_2'\n",
     "\n",
-    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
+    "viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
    ]
   },
   {
@@ -82,7 +82,7 @@
     "RUN = 2\n",
     "SAVE_DIR = 'sims/lin_ridge/smln_2'\n",
     "\n",
-    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
+    "viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
    ]
   },
   {
@@ -230,7 +230,7 @@
     "RUN = 0\n",
     "SAVE_DIR = 'sims/lin_ridge/smln_1'\n",
     "\n",
-    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
+    "viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
    ]
   },
   {
@@ -377,7 +377,7 @@
     "RUN = 1\n",
     "SAVE_DIR = 'sims/lin_ridge/smln_1'\n",
     "\n",
-    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
+    "viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
    ]
   },
   {
@@ -519,7 +519,7 @@
     "RUN = 2\n",
     "SAVE_DIR = 'sims/lin_ridge/smln_1'\n",
     "\n",
-    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
+    "viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
    ]
   },
   {
@@ -658,7 +658,7 @@
     "RUN = 0\n",
     "SAVE_DIR = 'sims/lin_ridge/smln_1'\n",
     "\n",
-    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
+    "viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
    ]
   },
   {
@@ -848,7 +848,7 @@
     "RUN = 0\n",
     "SAVE_DIR = 'sims/lin_ridge/smln_1'\n",
     "\n",
-    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=300)"
+    "viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=300)"
    ]
   },
   {
@@ -987,7 +987,7 @@
     "RUN = 0\n",
     "SAVE_DIR = 'sims/lin_ridge/smln_1'\n",
     "\n",
-    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
+    "viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=600)"
    ]
   },
   {
@@ -1160,7 +1160,7 @@
     "RUN = 1\n",
     "SAVE_DIR = 'sims/lin_ridge/smln_1'\n",
     "\n",
-    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=300)"
+    "viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 10), report_every=300)"
    ]
   },
   {
@@ -1273,7 +1273,7 @@
     "RUN = 0\n",
     "SAVE_DIR = 'sims/lin_ridge/smln_1_rand'\n",
     "\n",
-    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(10, 7), positions='random', report_every=600)"
+    "viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(10, 7), positions='random', report_every=600)"
    ]
   },
   {
@@ -1412,7 +1412,7 @@
     "RUN = 0\n",
     "SAVE_DIR = 'sims/lin_ridge/smln_1_rand'\n",
     "\n",
-    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(10, 7), positions='random', report_every=300)"
+    "viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(10, 7), positions='random', report_every=300)"
    ]
   },
   {
@@ -1514,7 +1514,7 @@
     "RUN = 1\n",
     "SAVE_DIR = 'sims/lin_ridge/smln_0'\n",
     "\n",
-    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 7), report_every=300)"
+    "viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(15, 7), report_every=300)"
    ]
   },
   {
@@ -1609,7 +1609,7 @@
     "RUN = 1\n",
     "SAVE_DIR = 'sims/lin_ridge/smln_0_rand'\n",
     "\n",
-    "lin_ridge_viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(10, 5), positions='random', report_every=300)"
+    "viz.animate(SAVE_DIR, TRIAL, RUN, pre, C, P, fig_size=(10, 5), positions='random', report_every=300)"
    ]
   }
  ],
