--- a/s4_lin_ridge_trials.ipynb
+++ b/s4_lin_ridge_trials.ipynb
@@ -36,10 +36,10 @@
     "import aux\n",
     "from db.d_models import LinRidgeTrial as T\n",
     "from plot import set_font_size\n",
-    "from search import lin_ridge_viz\n",
+    "from lin_ridge import viz\n",
     "\n",
     "import PARAMETERS as P\n",
-    "from search import lin_ridge_global as C"
+    "from lin_ridge import search_global as C"
    ]
   },
   {
@@ -50,7 +50,7 @@
    },
    "outputs": [],
    "source": [
-    "trials = lin_ridge_viz.select_trials(\n",
+    "trials = viz.select_trials(\n",
     "    smln_id='smln_2',\n",
     "    filt=[T.stability > 0.1, T.speed < 15],\n",
     "    order_by='speed', lmt=10000)"
