--- a/s2_lin_ridge_trials.ipynb
+++ b/s2_lin_ridge_trials.ipynb
@@ -40,10 +40,10 @@
    ],
    "source": [
     "%reset -f\n",
-    "from search import lin_ridge\n",
+    "from lin_ridge import search\n",
     "\n",
     "# list active searchers\n",
-    "lin_ridge.search_status(smln_id='smln_2', recent=300)"
+    "search.search_status(smln_id='smln_2', recent=300)"
    ]
   },
   {
@@ -61,7 +61,7 @@
    ],
    "source": [
     "# read optional error message\n",
-    "lin_ridge.read_search_error(searcher_id=36)"
+    "search.read_search_error(searcher_id=36)"
    ]
   },
   {
@@ -82,10 +82,10 @@
     "%matplotlib inline\n",
     "import aux\n",
     "from db.d_models import LinRidgeTrial as T\n",
-    "from search import lin_ridge_viz\n",
+    "from lin_ridge import viz\n",
     "\n",
     "import PARAMETERS as P\n",
-    "from search import lin_ridge_global as C\n",
+    "from lin_ridge import search_global as C\n",
     "\n",
     "\n",
     "pre = {\n",
@@ -111,7 +111,7 @@
     }
    ],
    "source": [
-    "lin_ridge_viz.rslt_scatter(\n",
+    "viz.rslt_scatter(\n",
     "    smln_id='smln_2',\n",
     "    filt=[T.stability > 0, T.speed < 10, T.activity < 10],\n",
     "    lmt=10000, c='k', s=5, alpha=1);"
@@ -1187,7 +1187,7 @@
     }
    ],
    "source": [
-    "lin_ridge_viz.select_trials(\n",
+    "viz.select_trials(\n",
     "    smln_id='smln_2',\n",
     "    filt=[T.stability > 0], order_by='speed', lmt=50\n",
     "    )[[\n",
@@ -1235,7 +1235,7 @@
     }
    ],
    "source": [
-    "lin_ridge_viz.raster(27322, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
+    "viz.raster(27322, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
    ]
   },
   {
@@ -1263,7 +1263,7 @@
     }
    ],
    "source": [
-    "lin_ridge_viz.raster(26794, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
+    "viz.raster(26794, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
    ]
   },
   {
@@ -1291,7 +1291,7 @@
     }
    ],
    "source": [
-    "lin_ridge_viz.raster(25381, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
+    "viz.raster(25381, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
    ]
   },
   {
@@ -1319,7 +1319,7 @@
     }
    ],
    "source": [
-    "lin_ridge_viz.raster(26076, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
+    "viz.raster(26076, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
    ]
   },
   {
@@ -1347,7 +1347,7 @@
     }
    ],
    "source": [
-    "lin_ridge_viz.raster(26022, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
+    "viz.raster(26022, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
    ]
   },
   {
@@ -1382,7 +1382,7 @@
     }
    ],
    "source": [
-    "lin_ridge_viz.raster(16515, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
+    "viz.raster(16515, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
    ]
   },
   {
@@ -1422,7 +1422,7 @@
     }
    ],
    "source": [
-    "lin_ridge_viz.print_trial(16515)"
+    "viz.print_trial(16515)"
    ]
   },
   {
@@ -1450,7 +1450,7 @@
     }
    ],
    "source": [
-    "lin_ridge_viz.raster(16517, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
+    "viz.raster(16517, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
    ]
   },
   {
@@ -1490,7 +1490,7 @@
     }
    ],
    "source": [
-    "lin_ridge_viz.print_trial(16517)"
+    "viz.print_trial(16517)"
    ]
   },
   {
@@ -1518,7 +1518,7 @@
     }
    ],
    "source": [
-    "lin_ridge_viz.raster(16556, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
+    "viz.raster(16556, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
    ]
   },
   {
@@ -1558,7 +1558,7 @@
     }
    ],
    "source": [
-    "lin_ridge_viz.print_trial(16556)"
+    "viz.print_trial(16556)"
    ]
   },
   {
@@ -1586,7 +1586,7 @@
     }
    ],
    "source": [
-    "lin_ridge_viz.raster(16717, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
+    "viz.raster(16717, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
    ]
   },
   {
@@ -1626,7 +1626,7 @@
     }
    ],
    "source": [
-    "lin_ridge_viz.print_trial(16717)"
+    "viz.print_trial(16717)"
    ]
   },
   {
@@ -1654,7 +1654,7 @@
     }
    ],
    "source": [
-    "lin_ridge_viz.raster(16544, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
+    "viz.raster(16544, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
    ]
   },
   {
@@ -1694,7 +1694,7 @@
     }
    ],
    "source": [
-    "lin_ridge_viz.print_trial(16544)"
+    "viz.print_trial(16544)"
    ]
   },
   {
@@ -1729,7 +1729,7 @@
     }
    ],
    "source": [
-    "lin_ridge_viz.raster(14388, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
+    "viz.raster(14388, pre, C, P, ax_height=3, c='k', marker='.', lw=0, s=10);"
    ]
   },
   {
@@ -1769,7 +1769,7 @@
     }
    ],
    "source": [
-    "lin_ridge_viz.print_trial(14388)"
+    "viz.print_trial(14388)"
    ]
   }
  ],
