Start working on full ridge replay simulation.

--- a/1B_lin_ridge.ipynb
+++ b/1B_lin_ridge.ipynb
@@ -6,6 +6,95 @@
    "source": [
     "# Full linear ridge simulations"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import aux\n",
+    "from db.d_models import LinRidgeTrial as T\n",
+    "from lin_ridge.viz import select_trials\n",
+    "from search import full\n",
+    "from search import full_global as C\n",
+    "\n",
+    "import PARAMETERS as P\n",
+    "\n",
+    "\n",
+    "N_REPEATS = 3\n",
+    "FIG_SIZE = (15, N_REPEATS * 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# load pre-computed files\n",
+    "pre = {\n",
+    "    'w_n_pc_ec_vs_dist': aux.load(C.PATH_W_N_PC_EC_VS_DIST),\n",
+    "    'v_g_n_vs_w_n_pc_ec_fr_ec': aux.load(C.PATH_V_G_N_VS_W_N_PC_EC_FR_EC)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Select replay-only trials we want to run full smlns for."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "trials = select_trials(smln_id=1, filt=[T.stability > 0.5, speed < 10], lmt=2)\n",
+    "trials"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run full smlns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for trial_id in trials['id']:\n",
+    "    \n",
+    "    print('Trial {}:'.format(trial_id))\n",
+    "    \n",
+    "    fig, axs = plt.subplots(1, N_REPEATS, figsize=FIG_SIZE, tight_layout=True)\n",
+    "    \n",
+    "    for ctr, ax in enumerate(axs):\n",
+    "        print('    repeat {}...'.format(ctr+1))\n",
+    "        rsp, p = full.run_smln(trial_id, T, pre, C, P, save=True, return_p=True)\n",
+    "        \n",
+    "        # make raster plot\n",
+    "        ax = raster(ax, rsp.ts, rsp.spks, rsp.pfcs, rsp.cell_types, p, C)\n",
+    "        \n",
+    "        ax.set_title('Trial {}: Repeat {}'.format(trial_id, ctr+1))"
+   ]
   }
  ],
  "metadata": {
@@ -24,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
