Finish first pass of untested code for running full smln given replay only trials.

--- a/1B_lin_ridge.ipynb
+++ b/1B_lin_ridge.ipynb
@@ -80,6 +80,12 @@
    },
    "outputs": [],
    "source": [
+    "commit = input(\n",
+    "    'Please commit relevant files and enter commit id (or \"q\" to quit): ')\n",
+    "\n",
+    "if commit.lower() == 'q':\n",
+    "    raise KeyboardInterrupt('Execution halted by user.')\n",
+    "\n",
     "for trial_id in trials['id']:\n",
     "    \n",
     "    print('Trial {}:'.format(trial_id))\n",
@@ -88,10 +94,12 @@
     "    \n",
     "    for ctr, ax in enumerate(axs):\n",
     "        print('    repeat {}...'.format(ctr+1))\n",
-    "        rsp, p = full.run_smln(trial_id, T, pre, C, P, save=True, return_p=True)\n",
+    "        \n",
+    "        seed = np.random.randint(0, C.MAX_SEED)\n",
+    "        rsp, p = full.run_smln(trial_id, T, pre, C, P, save=True, seed=seed, commit=commit)\n",
     "        \n",
     "        # make raster plot\n",
-    "        ax = raster(ax, rsp.ts, rsp.spks, rsp.pfcs, rsp.cell_types, p, C)\n",
+    "        ax = raster(ax, rsp.ts, rsp.spks, rsp.pfcs, rsp.cell_types, rsp.p, C)\n",
     "        \n",
     "        ax.set_title('Trial {}: Repeat {}'.format(trial_id, ctr+1))"
    ]
