Inspect and fix bugs.

--- a/1B_lin_ridge.ipynb
+++ b/1B_lin_ridge.ipynb
@@ -19,16 +19,14 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import aux\n",
-    "from db.d_models import LinRidgeTrial as T\n",
+    "from db.d_models import LinRidgeTrial\n",
+    "from lin_ridge import full\n",
+    "from lin_ridge import full_global as C\n",
+    "from lin_ridge import search_global as C_\n",
+    "from lin_ridge.full_viz import raster\n",
     "from lin_ridge.viz import select_trials\n",
-    "from search import full\n",
-    "from search import full_global as C\n",
     "\n",
-    "import PARAMETERS as P\n",
-    "\n",
-    "\n",
-    "N_REPEATS = 3\n",
-    "FIG_SIZE = (15, N_REPEATS * 5)"
+    "import PARAMETERS as P"
    ]
   },
   {
@@ -42,7 +40,7 @@
     "# load pre-computed files\n",
     "pre = {\n",
     "    'w_n_pc_ec_vs_dist': aux.load(C.PATH_W_N_PC_EC_VS_DIST),\n",
-    "    'v_g_n_vs_w_n_pc_ec_fr_ec': aux.load(C.PATH_V_G_N_VS_W_N_PC_EC_FR_EC)\n",
+    "    'v_g_n_vs_w_n_pc_ec_fr_ec': aux.load(C.PATH_V_G_N_VS_W_N_PC_EC_FR_EC),\n",
     "}"
    ]
   },
@@ -61,7 +59,10 @@
    },
    "outputs": [],
    "source": [
-    "trials = select_trials(smln_id=1, filt=[T.stability > 0.5, speed < 10], lmt=2)\n",
+    "T = LinRidgeTrial\n",
+    "\n",
+    "trials = select_trials(\n",
+    "    smln_id='smln_2', filt=[T.stability > 0.5, T.speed < 10, T.angle < 0.3], lmt=1)\n",
     "trials"
    ]
   },
@@ -80,6 +81,9 @@
    },
    "outputs": [],
    "source": [
+    "N_REPEATS = 1\n",
+    "FIG_SIZE = (15, N_REPEATS * 5)\n",
+    "\n",
     "commit = input(\n",
     "    'Please commit relevant files and enter commit id (or \"q\" to quit): ')\n",
     "\n",
@@ -96,12 +100,15 @@
     "        print('    repeat {}...'.format(ctr+1))\n",
     "        \n",
     "        seed = np.random.randint(0, C.MAX_SEED)\n",
-    "        rsp, p = full.run_smln(trial_id, T, pre, C, P, save=True, seed=seed, commit=commit)\n",
+    "        rsp = full.run_smln(trial_id, LinRidgeTrial, pre, C, P, C_, save=True, seed=seed, commit=commit)\n",
     "        \n",
     "        # make raster plot\n",
     "        ax = raster(ax, rsp.ts, rsp.spks, rsp.pfcs, rsp.cell_types, rsp.p, C)\n",
     "        \n",
-    "        ax.set_title('Trial {}: Repeat {}'.format(trial_id, ctr+1))"
+    "        ax.set_title(\n",
+    "            'Trial {0}: repeat {1}\\n(replay_fr = {2:.4f}, '\n",
+    "            'fr_min = {3:.4f}, fr_max = {4:.4f}'.format(\n",
+    "                trial_id, ctr+1, rsp.trial.replay_fr, rsp.trial.replay_fr_min, rsp.trial.replay_fr_max))"
    ]
   }
  ],
