--- a/1C_lin_ridge.ipynb
+++ b/1C_lin_ridge.ipynb
@@ -18,7 +18,7 @@
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from search.full_viz import raster, animate"
+    "from search.full_viz import raster_from_trial, animate"
    ]
   },
   {
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "# show raster plot\n",
-    "raster(trial_id=12345)"
+    "raster_from_trial(trial_id=11)"
    ]
   },
   {
