Checkpoint before running tests for lin ridge full smlns.

--- a/2B_lin_ridge_full.ipynb
+++ b/2B_lin_ridge_full.ipynb
@@ -25,6 +25,7 @@
     "from lin_ridge import search_global as C_\n",
     "from lin_ridge.full_viz import raster\n",
     "from lin_ridge.viz import select_trials\n",
+    "from plot import set_font_size\n",
     "\n",
     "import PARAMETERS as P"
    ]
@@ -82,7 +83,6 @@
    "outputs": [],
    "source": [
     "N_REPEATS = 1\n",
-    "FIG_SIZE = (15, N_REPEATS * 5)\n",
     "\n",
     "commit = input(\n",
     "    'Please commit relevant files and enter commit id (or \"q\" to quit): ')\n",
@@ -103,12 +103,15 @@
     "        rsp = full.run_smln(trial_id, LinRidgeTrial, pre, C, P, C_, save=True, seed=seed, commit=commit)\n",
     "        \n",
     "        # make raster plot\n",
-    "        ax = raster(ax, rsp.ts, rsp.spks, rsp.pfcs, rsp.cell_types, rsp.p, C)\n",
+    "        fig, axs = raster(rsp.ts, rsp.spks, rsp.pfcs, rsp.cell_types, rsp.p, C, fig_size=(15, 9))\n",
     "        \n",
-    "        ax.set_title(\n",
+    "        axs[0].set_title(\n",
     "            'Trial {0}: repeat {1}\\n(replay_fr = {2:.4f}, '\n",
     "            'fr_min = {3:.4f}, fr_max = {4:.4f}'.format(\n",
-    "                trial_id, ctr+1, rsp.trial.replay_fr, rsp.trial.replay_fr_min, rsp.trial.replay_fr_max))"
+    "                trial_id, ctr+1, rsp.trial.replay_fr, rsp.trial.replay_fr_min, rsp.trial.replay_fr_max))\n",
+    "        \n",
+    "        for ax in axs:\n",
+    "            set_font_size(ax, 16)"
    ]
   }
  ],
