Run a couple more tests and fix some bugs.

--- a/2A_lin_ridge_full.ipynb
+++ b/2A_lin_ridge_full.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,8 +17,12 @@
    "source": [
     "%reset -f\n",
     "%matplotlib inline\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "from copy import deepcopy\n",
     "import matplotlib.pyplot as plt\n",
-    "import np\n",
+    "import numpy as np\n",
     "\n",
     "import aux\n",
     "from lin_ridge import full_global as C\n",
@@ -40,11 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests passed.\n"
+     ]
+    }
+   ],
    "source": [
     "from lin_ridge.full import get_replay_metrics\n",
     "\n",
@@ -55,20 +65,21 @@
     "class PMock(object):\n",
     "    DT = 0.1\n",
     "\n",
-    "spks = np.zeros((len(ts), pfcs.shape[1]), dtype=bool)\n",
+    "ts = np.arange(0, 1, PMock.DT)\n",
     "\n",
+    "pfcs = np.array([\n",
+    "    [1., 2, 3, 4, 5, 6],\n",
+    "    [-2, -2, 0, 0, 2, 2]\n",
+    "])\n",
+    "\n",
+    "spks = np.zeros((len(ts), pfcs.shape[1]), dtype=bool)\n",
     "spks[:, 0] = True\n",
     "spks[:, 4] = True\n",
     "\n",
     "class RspMock(object):\n",
     "    \n",
-    "    ts = np.arange(0, 1, PMock)\n",
-    "    \n",
-    "    pfcs = np.array([\n",
-    "        [1., 2, 3, 4, 5, 6],\n",
-    "        [-2, -2, 0, 0, 2, 2]\n",
-    "    ])\n",
-    "    \n",
+    "    ts = ts\n",
+    "    pfcs = pfcs\n",
     "    spks = spks\n",
     "    \n",
     "p_mock = {'AREA_H': 6}\n",
@@ -76,7 +87,7 @@
     "replay_fr_correct = 20 / 6\n",
     "replay_fr_min_correct = 0\n",
     "replay_fr_max_correct = 5\n",
-    "    \n",
+    "\n",
     "replay_fr, replay_fr_min, replay_fr_max = get_replay_metrics(RspMock, p_mock, CMock, PMock)\n",
     "\n",
     "np.testing.assert_almost_equal(replay_fr, replay_fr_correct)\n",
@@ -95,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -103,18 +114,39 @@
    "source": [
     "# load pre-computed files\n",
     "pre = {\n",
-    "    'w_n_pc_ec_vs_dist': aux.load(C.PATH_W_N_PC_EC_VS_DIST),\n",
-    "    'v_g_n_vs_w_n_pc_ec_fr_ec': aux.load(C.PATH_V_G_N_VS_W_N_PC_EC_FR_EC),\n",
+    "    'w_n_pc_ec_vs_dist': aux.load(C_.PATH_W_N_PC_EC_VS_DIST),\n",
+    "    'v_g_n_vs_w_n_pc_ec_fr_ec': aux.load(C_.PATH_V_G_N_VS_W_N_PC_EC_FR_EC),\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "STABILITY:\n",
+      "MEASURED = 0.6666666666666666\n",
+      "TRUE = 0.666666666666667\n",
+      "\n",
+      "ANGLE:\n",
+      "MEASURED = 0.24754040548792955\n",
+      "TRUE = 0.24754040548792955\n",
+      "\n",
+      "ACTIVITY:\n",
+      "MEASURED = 2.629125705426628\n",
+      "TRUE = 2.629125705426628\n",
+      "\n",
+      "SPEED:\n",
+      "MEASURED = 10.883231571408379\n",
+      "TRUE = 10.883231571408379\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from lin_ridge.search import trial_to_stable_ntwk\n",
     "\n",
@@ -138,9 +170,9 @@
     "trial.z_pc = 0.855577676548951\n",
     "\n",
     "trial.stability = 0.666666666666667\n",
-    "trial.angle = 0.24754040548793\n",
-    "trial.activity = 2.62912570542662\n",
-    "trial.speed = 10.8832315714084\n",
+    "trial.angle = 0.24754040548792955\n",
+    "trial.activity = 2.6291257054266279\n",
+    "trial.speed = 10.883231571408379\n",
     "\n",
     "# run trial and extract stable ntwk\n",
     "ntwk, vs_0, gs_0, spks_forced, extra = trial_to_stable_ntwk(trial, pre, C_, P, test=True)\n",
@@ -151,21 +183,32 @@
     "activities = extra['rslts_all']['ACTIVITY']\n",
     "speeds = extra['rslts_all']['SPEED']\n",
     "\n",
-    "np.testing.assert_almost_equal(stabilities[extra['idx_stable']], 1)\n",
+    "print('STABILITY:')\n",
+    "print('MEASURED = {}'.format(np.mean(stabilities)))\n",
+    "print('TRUE = {}'.format(trial.stability))\n",
+    "print('')\n",
     "\n",
-    "np.testing.assert_almost_equal(\n",
-    "    np.mean(stabilities[stabilities == 1]), trial.stability)\n",
+    "print('ANGLE:')\n",
+    "print('MEASURED = {}'.format(np.mean(angles[stabilities == 1])))\n",
+    "print('TRUE = {}'.format(trial.angle))\n",
+    "print('')\n",
     "\n",
-    "np.testing.assert_almost_equal(\n",
-    "    np.mean(angles[stabilities == 1], trial.angle))\n",
+    "print('ACTIVITY:')\n",
+    "print('MEASURED = {}'.format(np.mean(activities[stabilities == 1])))\n",
+    "print('TRUE = {}'.format(trial.activity))\n",
+    "print('')\n",
     "\n",
-    "np.testing.assert_almost_equal(\n",
-    "    np.mean(activities[stabilities == 1], trial.activity))\n",
-    "\n",
-    "np.testing.assert_almost_equal(\n",
-    "    np.mean(speeds[stabilities == 1], trial.speed))\n",
-    "\n",
-    "print('Tests passed.')"
+    "print('SPEED:')\n",
+    "print('MEASURED = {}'.format(np.mean(speeds[stabilities == 1])))\n",
+    "print('TRUE = {}'.format(trial.speed))\n",
+    "print('')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tests passed if measured values are all almost identical to true ones."
    ]
   },
   {
@@ -177,15 +220,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "ntwk_ = deepcopy(ntwk)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests passed.\n"
+     ]
+    }
+   ],
+   "source": [
     "from lin_ridge.full import add_w_up_a_pc_pl\n",
     "\n",
-    "ntwk = add_w_up_a_pc_pl(ntwk, P)\n",
+    "ntwk = add_w_up_a_pc_pl(ntwk_, P)\n",
     "\n",
     "pc_mask = np.all(~np.isnan(ntwk.pfcs), axis=0)\n",
     "n_pc = pc_mask.sum()\n",
@@ -199,17 +259,17 @@
     "nz_mask_a = np.zeros((ntwk.n, 2*n_pc), dtype=bool)\n",
     "nz_mask_a[:n_pc, :n_pc] = np.eye(n_pc, dtype=bool)\n",
     "\n",
-    "assert np.all(ntwk.ws_up_init['AMPA'][~nz_mask_a] == 0)\n",
+    "assert np.sum(ntwk.ws_up_init['AMPA'][~nz_mask_a]) == 0\n",
     "\n",
     "# check NMDA cxns\n",
     "w_up_n = ntwk.ws_up_init['NMDA'].copy()\n",
     "nz_mask_n = np.zeros((ntwk.n, 2*n_pc), dtype=bool)\n",
     "nz_mask_n[:n_pc, n_pc:] = np.eye(n_pc, dtype=bool)\n",
     "\n",
-    "assert np.all(ntwk.ws_up_init['NMDA'][~nz_mask_n] == 0)\n",
+    "assert np.sum(ntwk.ws_up_init['NMDA'][~nz_mask_n]) == 0\n",
     "\n",
     "# check GABA cxns\n",
-    "assert np.all(ntwk.ws_up_init['GABA'] == 0)\n",
+    "assert np.sum(ntwk.ws_up_init['GABA']) == 0\n",
     "\n",
     "print('Tests passed.')"
    ]
@@ -410,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
